# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.456 2012/10/22 10:14:31 tommy Exp $

  22 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  enlightenment.eclass:
  Enable verbose output

  21 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gst-plugins-base.eclass:
  Switch to xz tarballs in EAPI4.

  19 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Call no-op default phases for each implementation (meaningless but more
  correct).

  19 Oct 2012; Patrick Lauer <patrick@gentoo.org> check-reqs.eclass:
  Fixing units

  19 Oct 2012; Patrick Lauer <patrick@gentoo.org> check-reqs.eclass:
  Fixing binpkg behaviour

  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass:
  Respect AR and RANLIB, wrt bug #436070.

  16 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Unset FC and F77 if no fortran support is wanted

  16 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
  Add enhanced DEP support in fortran-2.eclass to easy the usage. Only inherit
  fortran-2 is need for general use. For a USE dependency on fortran the new
  FORTRAN_NEEDED=USE variable was introduced

  16 Oct 2012; Ben de Groot <yngwin@gentoo.org> -qt4.eclass:
  Removing qt4.eclass as announced on Sep 13

  15 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass,
  python-r1.eclass:
  Enable EAPI 5 support.

  15 Oct 2012; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Fix missing wrapper symlinks when first supported Python implementation is
  disabled.

  14 Oct 2012; Alexey Shvetsov <alexxy@gentoo.org> openib.eclass:
  Add compat-rdma

  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft.eclass:
  Add compiler version checking for LeechCraft

  14 Oct 2012; Michał Górny <mgorny@gentoo.org> +distutils-r1.eclass:
  Introduce distutils-r1, a new (and simpler) eclass for Python packages using