@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.456 2012/10/22 10:14:31 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.457 2012/10/22 19:00:52 mpagano Exp $
+
+  22 Oct 2012; Michael Pagano <mpagano@gentoo.org> linux-info.eclass:
+  Update for new location of version.h. Thanks to Magnus Helmersson. Bug
+  #438876
 
   22 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   enlightenment.eclass:
